# solana-tracker

./: .env  .env.example  Anchor.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  todo.md
 .github/workflows/: scheduled-run.yml
.github/workflows/: docker-image.yml
app/: Cargo.toml
app/src/: config.rs  helpers.rs  main.rs  sol.rs  waka.rs  waka_types.rs
programs/tracker/: Cargo.toml
programs/tracker/src/: lib.rs
src/: consts.rs  main.rs  sol.rs  waka.rs
src/tracker/: Anchor.toml
src/tracker/programs/tracker/src/: lib.rs
src/tracker/tests/: tracker.ts
tests/: tracker.ts
