[package]
name = "wakatime-blockchain-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
solana-program = "2.2.1"
solana-client = "2.2.7"
solana-sdk = "2.2.1"
anchor-client = { version = "0.31.1", features = ["async"] }
tracker = { path = "src/tracker/programs/tracker" }